Fixed z-index for options

--- a/src/components/Options/styles.scss
+++ b/src/components/Options/styles.scss
@@ -24,6 +24,7 @@
   min-width: 50px;
   text-align: center;
   cursor: pointer;
+  z-index: 10;
 
   &--expanded {
     width: 100%;
